@@ -101,6 +101,7 @@ Se corrigió un error que podía bloquear ZEsarUX al cambiar a una máquina con 
 Se corrigió la visualización del creador en el visor de archivos DSK
 Se corrigió Pausa: ahora también puede regresar al presionar el botón del mouse
 Se corrigieron las expresiones de análisis del ensamblador (NN) y NN es un número hexadecimal
+Se corrigió debug step over y el envío de teclas a la máquina emulada
 Se corrigió la configuración "set machine snap load" al cargar instantáneas .Z80 versión 1
 
 * Cambios varios:
